# civic-safe-Research-Project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  A100_SYNC.md  CITATION.cff  Dockerfile  ELEVATED_MASTER_PLAN.md  ELEVATED_MASTER_PLAN_v2_OICC.md  LICENSE  MATHEMATICS.md  OICC.md  README.md  REPRODUCIBILITY.md  RESEARCH_ROADMAP.md  RUN_GUIDE_A100.md  pyproject-oicc.toml  pyproject.toml  requirements-a100.txt  requirements-oicc.txt  run_all.ps1  run_all.py  setup_and_verify.py
.github/workflows/: ci.yml  oicc-ci.yml
configs/audit/: default.yaml
configs/calibration/: adaptive_ecrc.yaml  ecrc.yaml  equalized.yaml  mondrian.yaml  split_cp.yaml  weighted_cp.yaml
configs/data/: chicago.yaml  nyc.yaml
configs/experiment/: full.yaml
configs/model/: spatiotemporal_zinb.yaml
configs/routing/: default.yaml
configs/training/: default.yaml
data/ncrb/: crime_data.csv
docs/: ANALYSIS_LOG_2026-06-13.md  AUDIT_2026-07.md  METHODOLOGY.md  NOVELTY_AND_POSITIONING.md  PAPER_OUTLINE.md  PROOFS_feedback_law.md  RESULTS_deployment_layer.md  RESULTS_field_identification.md  RESULTS_latent_correction.md  RESULTS_robustness_and_crosscity.md  paper.tex
docs/data_access/: README.md  cfs_foia_request.md  ncvs_restricted_request.md
experiments/: POC_FINDINGS.md  POC_RESULTS.txt  multichannel_poc.py  multichannel_poc_v2.py
experiments/oicc_runs/: NCRB_RESULTS.txt  REAL_US_DATA.md  US_RESULTS.txt  device_smoke.py  make_figures.py  make_pub_figures.py  make_routing_figure.py  make_us_npy.py  ncrb_loader.py  oicc_style.py  paths.py  reproduce_all.py  run_feedback_routing_experiment.py  run_ncrb_experiment.py  run_us_experiment.py  run_us_multichannel_experiment.py  us_loader.py  us_multichannel_loader.py
outputs/: fairness_audit.md  field_identification.json
outputs/conformal_evaluation/: chicago_audit_report.md  chicago_calibrators.pt  chicago_conformal_results.json
outputs/eval/: evaluation_results.json
outputs/reproduce/run_1780387437/: calibration_results.json
outputs/results/: calibration_comparison.json  routing_comparison.json  table_calibration.tex  table_routing.tex
paper/: OICC_THEOREMS.md  oicc_paper.tex
paper/arxiv/: PR_BODY.md  README.md  make_arxiv.py  metadata.txt
scripts/: a100_sync.py  ablation_study.py  aobf_benchmark.py  audit_fairness.py  baselines.py  build_demographics.py  cross_city_disparity.py  deep_baselines.py  emos_ensemble.py  evaluate.py  evaluate_fairness.py  evaluate_trained.py  fetch_data.py  field_identification_shotspotter.py  generate_figures.py  latent_correction_experiment.py  launch_campaign.sh  proxy_audit.py  quick_train_checkpoint.py  reproduce.py  routing_disparity_experiment.py  run_conformal_evaluation.py  run_full_campaign.py  train.py  validate_did_estimator.py  visualize.py
src/civicsafe/: __init__.py
src/oicc/: README.md  __init__.py  baselines.py  cf_deconv.py  conformal.py  conformal_split.py  deconvolve.py  measurement.py  moments.py  monitor.py  proximal.py  spec_test.py  uncertainty.py
tests/: __init__.py  conftest.py  test_audit.py  test_calibration.py  test_checkpointing.py  test_correction_robustness.py  test_data.py  test_exposure_conformal.py  test_feedback_aware_routing.py  test_feedback_law.py  test_feedback_tripwire.py  test_field_identification.py  test_latent_correction.py  test_models.py  test_numerics.py  test_routing.py  test_seeding.py  test_sensitivity.py  test_smoke.py  test_synthetic.py  test_training.py
tests_oicc/: conftest.py  test_baselines.py  test_cumulant_test.py  test_device_smoke.py  test_feedback_routing.py  test_ncrb_realdata.py  test_ncrb_twocontrol.py  test_oicc.py  test_oicc_advanced.py  test_oicc_sota.py  test_oicc_stress.py  test_us_multichannel.py  test_us_multichannel_experiment.py  test_us_realdata.py
theory/: OICC_identification_theorems.tex
(+109 files in other folders)
