[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "civicsafe"
version = "0.1.0"
description = "CIVIC-SAFE: Audited Conformal Crime Forecasting Under Temporal Drift and Reporting Uncertainty"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CIVIC-SAFE Research Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML
    "torch>=2.2.0,<3.0",
    "torch-geometric>=2.5.0,<3.0",
    "numpy>=1.26.0,<2.1",
    "scipy>=1.12.0,<2.0",
    "statsmodels>=0.14.1,<0.15",
    # Data
    "pandas>=2.2.0,<3.0",
    "geopandas>=0.14.3,<1.0",
    "pyarrow>=15.0.0",
    # Configuration & Tracking
    "hydra-core>=1.3.2,<2.0",
    "omegaconf>=2.3.0,<3.0",
    "wandb>=0.16.3,<1.0",
    # Geospatial
    "osmnx>=1.9.1,<2.0",
    "folium>=0.15.1,<1.0",
    "shapely>=2.0.0,<3.0",
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.2.1",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
census = [
    "cenpy>=1.0.1",
]
dvc = [
    "dvc>=3.48.0",
    "dvc-s3>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/civic-safe/civic-safe"
Documentation = "https://civic-safe.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

# ──────────────────────────────────────────────
# Ruff: lint + format
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "RUF001", "RUF002", "RUF003",  # Allow proper math symbols (×, –, −) in docs
    "RUF059",  # Allow tensor shape unpacking (S, T, F = x.shape)
    "N806",  # Allow uppercase variables for matrix dimensions (S, T, C)
    "N812",  # Allow torch.nn.functional as F (PyTorch convention)
    "N818",  # Allow exceptions without 'Error' suffix
    "SIM102",  # Allow nested ifs for readability
    "TC002",  # Allow Tensor import outside TYPE_CHECKING block
]

[tool.ruff.lint.isort]
known-first-party = ["civicsafe"]

# ──────────────────────────────────────────────
# Black: formatter
# ──────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ──────────────────────────────────────────────
# MyPy: type checking
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "smoke: end-to-end smoke tests",
]
